Fixing alignment issue with bottom notification (#10979)

--- a/ui/app/components/app/whats-new-popup/index.scss
+++ b/ui/app/components/app/whats-new-popup/index.scss
@@ -2,14 +2,12 @@
   &__notifications {
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
   &__notification,
   &__first-notification {
     display: flex;
     flex-direction: column;
-    align-items: left;
     margin: 0 24px 24px 24px;
     border-bottom: 1px solid $Grey-100;
   }
